--- a/onepage_index/index_onepage.html
+++ b/onepage_index/index_onepage.html
@@ -229,7 +229,7 @@
           </div>
           <h3>Mon CV</h3>
           <p>
-            Vous souhaitez avoir mon CV ? cliquez ci-dessous. Je suis à votre disposition. 
+            Vous souhaitez avoir mon CV ? cliquez ci-dessous. Je suis à votre disposition. Ok 
           </p>
           <a href="ressources/cv_Audifax_paterne.pdf" class="btn-projets"
             target="_blank">Télécharger mon CV</a
